--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,20 +7,20 @@ trigger:
   - master
 
 pr:
-  autoCancel: 'true'
+  autoCancel: "true"
 
 pool:
-  vmImage: 'windows-latest'
+  vmImage: "windows-latest"
 
 steps:
   - checkout: self
-    displayName: 'Checkout repository'
+    displayName: "Checkout repository"
 
   - task: PowerShell@2
     name: ResourcesJSON
-    displayName: 'Generating Resources JSON from PSGallery'
+    displayName: "Generating Resources JSON from PSGallery"
     inputs:
-      filePath: './Get-DscResourceKitInfo.ps1'
+      filePath: "./Get-DscResourceKitInfo.ps1"
       pwsh: true
       errorActionPreference: continue
 
@@ -31,18 +31,18 @@ steps:
   #     hugoVersion: 0.135.0
 
   - pwsh: |
-      $hugoUrl = "https://github.com/gohugoio/hugo/releases/download/v0.136.5/hugo_0.136.5_windows-amd64.zip"
+      $hugoUrl = "https://github.com/gohugoio/hugo/releases/download/v0.148.2/hugo_0.148.2_windows-amd64.zip"
       $outputPath = ".\hugo.zip"
       Invoke-WebRequest -Uri $hugoUrl -OutFile $outputPath
       Expand-Archive -Path $outputPath -DestinationPath ".\hugo"
-    displayName: 'Download and Extract Hugo'
+    displayName: "Download and Extract Hugo"
 
   - pwsh: |
       .\hugo\hugo.exe --source "$(System.DefaultWorkingDirectory)" --destination "$(Build.ArtifactStagingDirectory)" --printI18nWarnings --printPathWarnings --logLevel info
-    displayName: 'Build Hugo Site'
+    displayName: "Build Hugo Site"
 
   - task: PublishPipelineArtifact@0
-    displayName: 'Publish Hugo site as artifact'
+    displayName: "Publish Hugo site as artifact"
     inputs:
-      artifactName: 'dsccommunity'
-      targetPath: '$(Build.ArtifactStagingDirectory)'
+      artifactName: "dsccommunity"
+      targetPath: "$(Build.ArtifactStagingDirectory)"
