--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -14,9 +14,9 @@ RUN apt-get update && \
 # Install Hugo
 COPY .versions.json /tmp/.versions.json
 RUN HUGO_VERSION=$(jq -r '.hugo.version' /tmp/.versions.json) && \
-    wget https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_${HUGO_VERSION}_linux-amd64.deb && \
-    dpkg -i hugo_${HUGO_VERSION}_linux-amd64.deb && \
-    rm hugo_${HUGO_VERSION}_linux-amd64.deb /tmp/.versions.json
+    wget https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb && \
+    dpkg -i hugo_extended_${HUGO_VERSION}_linux-amd64.deb && \
+    rm hugo_extended_${HUGO_VERSION}_linux-amd64.deb /tmp/.versions.json
 
 # Set the default user
 USER vscode
